--- a/resources/fxml/home.fxml
+++ b/resources/fxml/home.fxml
@@ -5,15 +5,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.SVGPath?>
-<VBox stylesheets="/resources/css/main.css"
+<VBox stylesheets="/css/main.css"
       xmlns="http://javafx.com/javafx/8"
       xmlns:fx="http://javafx.com/fxml"
+      fx:controller="com.teamtreehouse.pomodoro.controllers.Home"
       fx:id="container">
     <children>
-
+        <Button fx:id="DEBUG" onAction="#DEBUG">DEBUG</Button>
         <Label fx:id="title" text="Pomodoro"/>
 
-        <Label fx:id="time" text="00:00"/>
+        <Label fx:id="time" text="${controller.timerText}"/>
 
         <HBox styleClass="buttons">
             <children>
@@ -59,7 +60,7 @@
 
         <ImageView>
             <image>
-                <Image url="/resources/images/pomodoro.png"/>
+                <Image url="/images/pomodoro.png"/>
             </image>
         </ImageView>
 
